# scat_msgs

./: CMakeLists.txt  README.md  package.xml
docs/: Object definition.xlsx
msg/: EnvObject.msg  EnvObjectList.msg  SharedVelocity.msg
srv/: SetMode.srv
