<?xml version="1.0"?>
<package format="2">
  <name>scat_msgs</name>
  <version>0.0.0</version>
  <description>The scat_messages package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="martijn@todo.todo">martijn</maintainer>

  <license>TODO</license>


  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>	
  <buildtool_depend>catkin</buildtool_depend>



  <export>
  <cpp cflags="-I${prefix}/srv/cpp"/>
  </export>
</package>
